@@ -28,6 +28,7 @@ import io.crate.types.DataTypes;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static io.crate.testing.SymbolMatchers.isFunction;
 import static io.crate.testing.SymbolMatchers.isLiteral;
@@ -38,7 +39,10 @@ public class ArrayCatFunctionTest extends AbstractScalarFunctionsTest {
 
     @Test
     public void testNormalizeWithValueSymbols() throws Exception {
-        assertNormalize("array_cat([10, 20], [10, 30])", isLiteral(Arrays.asList(10L, 20L, 10L, 30L)));
+        assertNormalize(
+            "array_cat([10, 20], [10, 30])",
+            isLiteral(List.of((short) 10, (short) 20, (short) 10, (short) 30))
+        );
     }
 
     @Test
@@ -48,7 +52,10 @@ public class ArrayCatFunctionTest extends AbstractScalarFunctionsTest {
 
     @Test
     public void testNullArguments() throws Exception {
-        assertNormalize("array_cat([1, 2, 3], null)", isLiteral(Arrays.asList(1L, 2L, 3L)));
+        assertNormalize(
+            "array_cat([1, 2, 3], null)",
+            isLiteral(List.of((short) 1, (short) 2, (short) 3))
+        );
     }
 
     @Test
@@ -61,14 +68,15 @@ public class ArrayCatFunctionTest extends AbstractScalarFunctionsTest {
     @Test
     public void testOneArgument() {
         expectedException.expect(UnsupportedOperationException.class);
-        expectedException.expectMessage("unknown function: array_cat(bigint_array)");
+        expectedException.expectMessage("unknown function: array_cat(smallint_array)");
         assertEvaluate("array_cat([1])", null);
     }
 
     @Test
     public void testThreeArguments() throws Exception {
         expectedException.expect(UnsupportedOperationException.class);
-        expectedException.expectMessage("unknown function: array_cat(bigint_array, bigint_array, bigint_array)");
+        expectedException.expectMessage(
+            "unknown function: array_cat(smallint_array, smallint_array, smallint_array)");
         assertEvaluate("array_cat([1], [2], [3])", null);
     }
 
